# xgs

./: README.md  license.txt
opengl/: IUnknownImpl.h  xGScontext.h  xGSdatabuffer.cpp  xGSdatabuffer.h  xGSframebuffer.cpp  xGSframebuffer.h  xGSgeometry.cpp  (+18 more)
src/: CMakeLists.txt  IUnknownImpl.h  IxGSImpl.cpp  IxGSdatabufferimpl.cpp  IxGSdatabufferimpl.h  IxGSframebufferimpl.cpp  IxGSframebufferimpl.h  IxGSgeometrybufferimpl.cpp  IxGSgeometrybufferimpl.h  IxGSimpl.cpp  IxGSimpl.h  IxGSinputimpl.cpp  IxGSinputimpl.h  app.cpp  app.h  msvc.cmake  xGS.def  xGSdatabuffer.cpp  xGSdatabuffer.h  xGSdatabufferbase.cpp  xGSdatabufferbase.h  xGSframebuffer.cpp  xGSframebuffer.h  xGSframebufferbase.cpp  xGSframebufferbase.h  xGSgeometry.cpp  xGSgeometry.h  xGSgeometrybuffer.cpp  xGSgeometrybuffer.h  xGSgeometrybufferbase.cpp  xGSgeometrybufferbase.h  xGSimpl.cpp  xGSimpl.h  xGSimplBase.cpp  xGSimplBase.h  xGSimplbase.cpp  xGSimplbase.h  xGSinputbase.cpp  xGSinputbase.h  xGSmain.cpp  (+10 more)
src/dx11/: xGSDX11.cpp  xGSDX11util.cpp  xGSDX11util.h  xGSdatabuffer.cpp  xGSdatabuffer.h  xGSframebuffer.cpp  xGSframebuffer.h  xGSgeometry.cpp  xGSgeometry.h  xGSgeometrybuffer.cpp  xGSgeometrybuffer.h  xGSimpl.cpp  xGSimpl.h  xGSinput.cpp  xGSinput.h  xGSmain.cpp  xGSparameters.cpp  xGSparameters.h  xGSplatform.cpp  xGSstate.cpp  xGSstate.h  xGStexture.cpp  xGStexture.h
src/dx12/: xGSDX12.cpp  xGSDX12util.cpp  xGSDX12util.h  xGSdatabuffer.cpp  xGSdatabuffer.h  xGSframebuffer.cpp  xGSframebuffer.h  xGSgeometrybuffer.cpp  xGSgeometrybuffer.h  xGSimpl.cpp  xGSimpl.h  xGSinput.cpp  xGSinput.h  xGSmain.cpp  xGSparameters.cpp  xGSparameters.h  xGSplatform.cpp  xGSstate.cpp  xGSstate.h  xGStexture.cpp  xGStexture.h
src/opengl/: OpenGL.cmake  xGSGLutil.cpp  xGSGLutil.h  xGScontext.h  xGSdatabuffer.cpp  xGSdatabuffer.h  xGSframebuffer.cpp  xGSframebuffer.h  xGSgeometry.cpp  xGSgeometry.h  xGSgeometrybuffer.cpp  xGSgeometrybuffer.h  xGSimpl.cpp  xGSimpl.h  xGSinput.cpp  xGSinput.h  xGSmain.cpp  xGSparameters.cpp  xGSparameters.h  xGSplatform.cpp  xGSstate.cpp  xGSstate.h  xGStexture.cpp  xGStexture.h
src/opengl/mac/: contextwrapper.h  contextwrapper.m  glplatform.h  xGScontextplatform.cpp  xGScontextplatform.h
src/opengl/win/: glplatform.h  windows.cmake  xGSOpenGL.cpp  xGSOpenGL.def  xGScontextplatform.cpp  xGScontextplatform.h  xGSdefaultcontext.cpp  xGSdefaultcontext.h
(+9 files in other folders)
